--- a/railties/lib/rails/generators/rails/app/templates/config/initializers/new_framework_defaults_7_0.rb.tt
+++ b/railties/lib/rails/generators/rails/app/templates/config/initializers/new_framework_defaults_7_0.rb.tt
@@ -60,3 +60,8 @@
 # This default means that all columns will be referenced in INSERT queries
 # regardless of whether they have a default or not.
 # Rails.application.config.active_record.partial_inserts = false
+
+# Disable backwards compatibility for old Marshal serilized messages.
+# JSON is now the new default serializer for ActiveSupport::MessageEncryptor.
+# Note that the JSON serializer does not preserve symbol keys and always produces string keys.
+# Rails.application.config.active_support.fallback_to_marshal_serialization = false
